add userProfile endpoints in Swagger-doc and /current router
