# swagger.json
@@ -121,27 +121,19 @@
         "responses": {
           "200": {
             "description": "Logout success"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
-    "/api/auth/current": {
+    "/api/auth/account": {
       "get": {
         "tags": ["Auth"],
         "summary": "Get current user",
         "parameters": [],
         "security": [{ "Bearer": [] }],
-        "requestBody": {
-          "description": "Current object",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CurrentUserRequest"
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
             "description": "Successful operation",
@@ -152,11 +144,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
-      }
-    },
-    "/api/auth/update": {
+      },
       "patch": {
         "tags": ["Auth"],
         "summary": "User profile update",
@@ -166,7 +159,7 @@
           "description": "User changes profile object",
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "$ref": "#/components/schemas/UserUpdateRequest"
               }
@@ -187,6 +180,9 @@
           "400": {
             "description": "Bad request (invalid request body)"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not found"
           }
@@ -203,7 +199,6 @@
           "name": {
             "type": "string",
             "description": "User's name",
-            "minLength": 3,
             "example": "Bob Smith"
           },
           "email": {
@@ -232,6 +227,12 @@
             "type": "string",
             "description": "User's email",
             "format": "email"
+          },
+          "password": {
+            "type": "string",
+            "description": "User's password",
+            "minLength": 7,
+            "example": "qwertonity"
           }
         }
       },
@@ -256,6 +257,18 @@
       "LoginResponse": {
         "type": "object",
         "properties": {
+          "email": {
+            "type": "string",
+            "description": "User's email",
+            "pattern": "^\\w+([\\.-]?\\w+)*@\\w+([\\.-]?\\w+)*(\\.\\w{2,3})+$",
+            "format": "email"
+          },
+          "password": {
+            "type": "string",
+            "description": "User's password",
+            "minLength": 7,
+            "example": "qwertonity"
+          },
           "token": {
             "type": "string",
             "description": "Access token for authorization",
@@ -263,85 +276,157 @@
           }
         }
       },
+      "CurrentUserResponse": {
+        "type": "object",
+        "properties": {
+          "user": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "description": "User's database id",
+                "example": "64d7869a9244fdaf11cad0af"
+              },
+              "name": {
+                "type": "string",
+                "description": "User's name",
+                "example": "John Dou"
+              },
+              "email": {
+                "type": "string",
+                "description": "User's email",
+                "format": "email"
+              },
+              "password": {
+                "type": "string",
+                "description": "User's password",
+                "minLength": 7,
+                "example": "qwertonity"
+              },
+              "token": {
+                "type": "string",
+                "description": "Access token for authorization",
+                "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0ZDc4NjlhOTI0NGZkYWYxMWNhZDBhZiIsImlhdCI6MTY5MTg0Nzc3OSwiZXhwIjoxNjkxOTMwNTc5fQ.VZhXjSMaN1l5jz656ClCdKAFQaF4GQ_ak2OqafUk0Kc"
+              },
+              "isReview": {
+                "type": "boolean",
+                "description": "Does the user have a review?"
+              },
+              "avatarURL": {
+                "type": "string",
+                "format": "uri",
+                "description": "User's avatar",
+                "example": "https://res.cloudinary.com/example/image"
+              },
+              "birthday": {
+                "type": "string",
+                "format": "date"
+              },
+              "skype": {
+                "type": "string"
+              },
+              "phone": {
+                "type": "string"
+              }
+            }
+          }
+        }
+      },
       "UserUpdateRequest": {
         "type": "object",
-        "required": ["name", "email", "isReview"],
         "properties": {
+          "_id": {
+            "type": "string",
+            "description": "User's database id",
+            "example": "64d7869a9244fdaf11cad0af"
+          },
           "name": {
             "type": "string",
             "description": "User's name",
-            "minLength": 3,
-            "example": "Bob Smith"
+            "example": "John Dou"
           },
           "email": {
             "type": "string",
             "description": "User's email",
-            "pattern": "^\\w+([\\.-]?\\w+)*@\\w+([\\.-]?\\w+)*(\\.\\w{2,3})+$",
             "format": "email"
           },
-          "isReview": {
-            "type": "boolean",
-            "description": "Does the user have a review?"
+          "password": {
+            "type": "string",
+            "description": "User's password",
+            "minLength": 7,
+            "example": "qwertonity"
+          },
+          "avatarURL": {
+            "type": "string",
+            "format": "uri",
+            "description": "User's avatar",
+            "example": "https://res.cloudinary.com/example/image"
+          },
+          "birthday": {
+            "type": "string",
+            "format": "date"
+          },
+          "skype": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
           }
         }
       },
       "UserUpdateResponse": {
         "type": "object",
         "properties": {
-          "name": {
-            "type": "string",
-            "description": "User's name",
-            "example": "Bob Smith"
-          },
-          "email": {
-            "type": "string",
-            "description": "User's email",
-            "format": "email"
-          },
-          "isReview": {
-            "type": "boolean",
-            "description": "Does the user have a review?"
-          }
-        }
-      },
-      "CurrentUserRequest": {
-        "type": "object",
-        "required": ["name", "email", "isReview"],
-        "properties": {
-          "name": {
-            "type": "string",
-            "description": "User's name",
-            "minLength": 3,
-            "example": "Bob Smith"
-          },
-          "email": {
-            "type": "string",
-            "description": "User's email",
-            "pattern": "^\\w+([\\.-]?\\w+)*@\\w+([\\.-]?\\w+)*(\\.\\w{2,3})+$",
-            "format": "email"
-          },
-          "isReview": {
-            "type": "boolean",
-            "description": "Does the user have a review?"
-          }
-        }
-      },
-      "CurrentUserResponse": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string",
-            "description": "User's name",
-            "example": "Bob Smith"
-          },
-          "email": {
-            "type": "string",
-            "description": "User's email",
-            "format": "email"
-          },
-          "isReview": {
-            "type": "boolean",
-            "description": "Does the user have a review?"
+          "user": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "description": "User's database id",
+                "example": "64d7869a9244fdaf11cad0af"
+              },
+              "name": {
+                "type": "string",
+                "description": "User's name",
+                "example": "John Dou"
+              },
+              "email": {
+                "type": "string",
+                "description": "User's email",
+                "format": "email"
+              },
+              "password": {
+                "type": "string",
+                "description": "User's password",
+                "minLength": 7,
+                "example": "qwertonity"
+              },
+              "token": {
+                "type": "string",
+                "description": "Access token for authorization",
+                "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0ZDc4NjlhOTI0NGZkYWYxMWNhZDBhZiIsImlhdCI6MTY5MTg0Nzc3OSwiZXhwIjoxNjkxOTMwNTc5fQ.VZhXjSMaN1l5jz656ClCdKAFQaF4GQ_ak2OqafUk0Kc"
+              },
+              "isReview": {
+                "type": "boolean",
+                "description": "Does the user have a review?"
+              },
+              "avatarURL": {
+                "type": "string",
+                "format": "uri",
+                "description": "User's avatar",
+                "example": "https://res.cloudinary.com/example/image"
+              },
+              "birthday": {
+                "type": "string",
+                "format": "date"
+              },
+              "skype": {
+                "type": "string"
+              },
+              "phone": {
+                "type": "string"
+              }
+            }
           }
         }
       }
